--- a/public/sass/base/_typography.scss
+++ b/public/sass/base/_typography.scss
@@ -20,6 +20,10 @@
     font-weight: 700;
     letter-spacing: 3px;
     text-align: center;
+
+    @include respond(phone) {
+        font-size: 5rem;
+    }
 }
 
 .secondary-header {
