--- a/public/sass/components/_chat.scss
+++ b/public/sass/components/_chat.scss
@@ -9,6 +9,8 @@
     border-bottom: 0;
     border-radius: 1rem 1rem 0 0;
 
+    backface-visibility: hidden;
+
     @include respond(phone) {
         width: 90%;
     }
@@ -95,6 +97,10 @@
         padding: 1rem;
         border: 0;
         border-bottom: 3px solid transparent;
+
+        @include respond(phone) {
+            font-size: 2.3rem;
+        }
 
         &:focus {
             border-bottom: 3px solid $green-primary;
