--- a/public/sass/pages/_inicio.scss
+++ b/public/sass/pages/_inicio.scss
@@ -6,6 +6,10 @@
     
     &__header {
         margin-bottom: 10rem;
+
+        @include respond(phone) {
+            margin-bottom: 5rem;
+        }
     }
 
     &__body {
